# st-device-sdk-c-ref

.github/workflows/: main.yml
apps/esp32/switch_example/main/: CMakeLists.txt  device_control.c  device_control.h  device_info.json  iot_dht11.c  iot_dht11.h  iot_ota.c  main.c  main.c.example  onboarding_config.json
